# Arduino_ConnectionHandler

./: CMakeLists.txt
examples/TestGPRS/: TestGPRS.ino
examples/TestGSM/: TestGSM.ino
examples/TestGSMClient/: TestGSMClient.ino
examples/TestGSMUdp/: TestGSMUdp.ino
examples/TestModem/: TestModem.ino
src/: Arduino_ConnectionHandler.h  ConnectionHandlerDefinitions.h  ConnectionHandlerInterface.h  GSMConnectionHandler.cpp  GSMConnectionHandler.h  GenericConnectionHandler.cpp  GenericConnectionHandler.h  TinyGSMCompat.cpp  TinyGSMCompat.h  TinyGSMConnectionHandler.cpp  TinyGSMConnectionHandler.h
src/compat/: GPRS.cpp  GPRS.h  GSM.cpp  GSM.h  GSMClient.cpp  GSMClient.h  GSMSSLClient.cpp  GSMSSLClient.h  GSMUdp.cpp  GSMUdp.h  Modem.cpp  Modem.h  TinyGSMCompat.h
src/connectionHandlerModels/: settings.h  settings_default.h
